[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "numpy",
    "fpm; platform_system!='Windows'",
    "ninja; platform_system!='Windows'", 
    "wheel"
]


[project]
name = "yaeos"
description = "Thermodynamic modelling with Equation of State"
readme = "README.md"
dependencies = ["numpy", "scipy", "pandas"]
version = "3.0.0"
requires-python = ">=3.10"


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.pytest.ini_options]
markers = [
    "marker_name: marker_description",
]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
# before-all = "yum update && yum -y install lapack-devel gcc-gfortran && ln -sf /usr/bin/gfortran /usr/bin/gfortran-13"
before-all = """
  curl -O https://ftp.gnu.org/gnu/gcc/gcc-13.1.0/gcc-13.1.0.tar.gz
  tar -xzf gcc-13.1.0.tar.gz
  cd gcc-13.1.0
  ./configure --disable-multilib --enable-languages=c,c++,fortran
  make -j$(nproc)
  make install
  ln -sf /usr/local/bin/gfortran /usr/bin/gfortran
  gfortran --version
"""

[tool.cibuildwheel.macos]
before-all = "brew update && brew install lapack"

[tool.cibuildwheel.windows]
before-all = """
    git clone https://github.com/microsoft/vcpkg.git
    cd vcpkg
    .\\bootstrap-vcpkg.bat
    .\\vcpkg install lapack blas
"""
